--- a/templates/AboutUsPage.html
+++ b/templates/AboutUsPage.html
@@ -24,10 +24,7 @@
                     <a class="nav-link text-white" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="{% url 'reader_home_page'%}">Reader Community</a>
-                </li>
-                <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="{% url 'writer_home_page'%}">Writer Community</a>
+                    <input type="search" class="nav-link" placeholder="Search">
                 </li>
                 <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="{% url 'about_us' %}">About Us</a>
