--- a/templates/CreateEvent.html
+++ b/templates/CreateEvent.html
@@ -44,12 +44,15 @@
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item mx-2">
+            {% comment %} <li class="nav-item mx-2">
               <a class="nav-link text-white" href="#">Reader Community</a>
+            </li> {% endcomment %}
+            <li class="nav-item mx-2">
+              <a class="nav-link text-white" href="#">Writer Home Page</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link text-white" href="#">Writer Community</a>
-            </li>
+              <input type="search" class="nav-link" placeholder="Search">
+          </li>
             <li class="nav-item mx-2">
               <a class="nav-link text-white" href="{% url 'writer_profile' %}"
                 >Profile</a
