--- a/templates/EditBook.html
+++ b/templates/EditBook.html
@@ -24,11 +24,14 @@
                 <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item mx-2">
+                {% comment %} <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="{% url 'reader_home_page' %}">Reader Community</a>
+                </li> {% endcomment %}
+                <li class="nav-item mx-2">
+                    <a class="nav-link text-white" href="{% url 'writer_home_page' %}">Writer Home Page</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="{% url 'writer_home_page' %}">Writer Community</a>
+                    <input type="search" class="nav-link" placeholder="Search">
                 </li>
                 <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="{% url 'reader_profile' %}">Profile</a>
