--- a/templates/EditEvent.html
+++ b/templates/EditEvent.html
@@ -23,11 +23,14 @@
                     <li class="nav-item mx-2">
                         <a class="nav-link text-white" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item mx-2">
+                    {% comment %} <li class="nav-item mx-2">
                         <a class="nav-link text-white" href="{% url 'reader_home_page' %}">Reader Community</a>
+                    </li> {% endcomment %}
+                    <li class="nav-item mx-2">
+                        <a class="nav-link text-white" href="{% url 'writer_home_page' %}">Writer Home Page</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link text-white" href="{% url 'writer_home_page' %}">Writer Community</a>
+                        <input type="search" class="nav-link" placeholder="Search">
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link text-white" href="{% url 'reader_profile' %}">Profile</a>
@@ -47,6 +50,7 @@
     <div class="form-container">
         <h2>Edit Event</h2>
         <form action="{%url 'edit_event' event.id%}" method="post">
+            {%csrf_token%}
             <div class="form-group">
                 <label for="event_name">Event Name:</label>
                 <input type="text" id="event_name" name="event_name" value="{{event.event_name}}" required>
