--- a/templates/EditWriterProfilePage.html
+++ b/templates/EditWriterProfilePage.html
@@ -24,10 +24,13 @@
                     <a class="nav-link text-white" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="#">Reader Community</a>
+                    <a class="nav-link text-white" href="#">Reader Home Page</a>
                 </li>
-                <li class="nav-item mx-2">
+                {% comment %} <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="#">Writer Community</a>
+                </li> {% endcomment %}
+                <li class="nav-item mx-2">
+                    <input type="search" class="nav-link" placeholder="Search">
                 </li>
                 <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="{% url 'about_us' %}">About Us</a>
